# axum-session-auth-example

./: Cargo.toml  Shuttle.toml
migrations/: 20230207115358_schema.sql
src/: database.rs  lib.rs  router.rs
