[package]
name = "axum-session-auth-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
axum = {version = "0.6.4", features = ["headers"]}
sync_wrapper = "0.1.2"
shuttle-shared-db = { version = "0.9.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls"] }
bcrypt = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
axum-macros = "0.3.2"
axum-extra = { version = "0.4.2", features = ["cookie-signed"] }
uuid-rs = { version = "0.6.3", features = ["random"] }
